--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "next:lint": "next lint",
     "lint": "eslint src/** --ext .ts,.tsx",
     "lint:fix": "eslint src/** --ext .ts,.tsx --fix && yarn format",
-    "format": "prettier --config .prettierrc --write '**/*.tsx'"
+    "format": "prettier --config .prettierrc --write '**/*.tsx'",
+    "test": "jest",
+    "test:coverage": "jest --collect-coverage"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -19,6 +21,8 @@
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.21.1",
     "camelcase-keys": "^6.2.2",
+    "enzyme": "^3.11.0",
+    "jest": "^27.1.0",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -30,12 +34,17 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^27.0.1",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-next": "11.0.0",
@@ -44,6 +53,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.4"
   }
 }
