feat: テスト名を表示させる

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "jest`s メモ": "// The error below may be caused by using the wrong test environment, see https://jestjs.io/docs/configuration#testenvironment-string. Consider using the `jsdom` test environment.",
-    "test": "jest --env=jsdom",
-    "test:watch": "jest --env=jsdom --watch",
+    "test": "jest --env=jsdom --verbose",
+    "test:watch": "jest --env=jsdom --watch --verbose",
     "next:lint": "next lint",
     "lint": "eslint src/** --ext .ts,.tsx",
     "lint:fix": "eslint src/** --ext .ts,.tsx --fix && yarn format",
