--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.1",
+    "@testing-library/user-event": "^13.2.1",
     "@types/react-redux": "^7.1.18",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.21.1",
