--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/user-event": "^13.2.1",
     "@types/react-redux": "^7.1.18",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.21.1",
@@ -36,6 +35,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.1.0",
+    "msw": "^0.35.0",
     "prettier": "^2.3.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.4"
